--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://masteroflink.github.io/portfolio",
+  "homepage": "https://bruce-bruno.netlify.app",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.13.3",
